--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   </div>
 
   <script>
-    const BIN_ID = "684184828960c979a5a58843";
-    const API_KEY = "$2a$10$vtHC0GYkOVoLV0QECjNVXuZ452gl2sppxnaU84yEjCfJ5pgbMFyzi";
+    const BIN_ID = "684194ea8a456b7966a9ced1";
+    const API_KEY = "$2a$10$f2z0PYYxfzeZrSzazT56I.ZoVOA0Puemv9KpqA/MbZMd7yz28gqnm";
     const API_URL = `https://api.jsonbin.io/v3/b/${BIN_ID}`;
 
     let allVideos = [];
