--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YouTube Share Viewer</title>
+  <title>Viewer</title>
   <style>
     :root {
       --bg: #111;
@@ -122,7 +122,7 @@
     <input type="text" id="search" placeholder="Search videos by title or description..." oninput="filterVideos()" />
 
     <div id="videoList">
-      <h2>📺 Shared Videos</h2>
+      <h2>📺 Videos </h2>
     </div>
   </div>
 
