--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1> AnonZx </h1>
+      <h1>📕 AnonZx 📕</h1>
       <button class="toggle-mode" onclick="toggleMode()">🌓</button>
     </div>
 
