--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     function renderVideos(videos) {
       const container = document.getElementById("videoList");
-      container.innerHTML = "<h2>📺 Shared Videos</h2>";
+      container.innerHTML = "<h2>📺 Videos</h2>";
 
       videos.forEach(video => {
         const div = document.createElement("div");
