--- a/panel/panel.html
+++ b/panel/panel.html
@@ -34,6 +34,15 @@
       transform: scale(1.5);
     }
 
+    input[type="text"] {
+      width: 100%;
+      padding: 0.7rem;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
     button {
       padding: 0.7rem 1.2rem;
       border: none;
@@ -48,6 +57,8 @@
 </head>
 <body>
   <h1>🛠️ Admin Panel</h1>
+
+  <input type="text" id="search" placeholder="🔍 Search videos..." />
 
   <div id="videoList">Loading videos...</div>
 
@@ -88,12 +99,14 @@
       });
     }
 
-    async function loadVideos() {
+    async function loadVideos(filter = "") {
       allVideos = await fetchVideos();
       const container = document.getElementById("videoList");
       container.innerHTML = "";
 
       allVideos.forEach((url, index) => {
+        if (!url.toLowerCase().includes(filter.toLowerCase())) return;
+
         const videoId = extractVideoId(url);
         if (!videoId) return;
 
@@ -126,6 +139,18 @@
       alert("✅ Deleted successfully!");
       loadVideos();
     }
+
+    document.getElementById("search").addEventListener("input", e => {
+      loadVideos(e.target.value);
+    });
+
+    // 🔍 Pressing "/" focuses the search input
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "/" && document.activeElement.tagName !== "INPUT") {
+        e.preventDefault();
+        document.getElementById("search").focus();
+      }
+    });
 
     loadVideos();
   </script>
