--- a/index.html
+++ b/index.html
@@ -62,15 +62,6 @@
       align-items: center;
     }
 
-    .toggle-mode {
-      cursor: pointer;
-      background: none;
-      border: 2px solid var(--text);
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      color: var(--text);
-    }
-
     .video-card {
       background: var(--card);
       border-radius: 10px;
@@ -145,13 +136,31 @@
       z-index: 1000;
     }
 
+    /* Floating Toggle Theme Button */
+    #toggleTheme {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: var(--card);
+      color: var(--text);
+      border: 2px solid var(--text);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2rem;
+      cursor: pointer;
+      z-index: 1000;
+      transition: background 0.3s, color 0.3s, border-color 0.3s;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
       <h1> ♔ AnonZx </h1>
-      <button class="toggle-mode" onclick="toggleMode()">🌓</button>
     </div>
 
     <input type="text" id="youtubeUrl" placeholder="Paste YouTube URL here..." />
@@ -169,6 +178,9 @@
 
   <!-- Back to Top Button -->
   <button id="backToTop" onclick="scrollToTop()">↑ Top</button>
+
+  <!-- Floating Toggle Theme Button -->
+  <button id="toggleTheme" onclick="toggleMode()">🌓</button>
 
   <script>
     const BIN_ID = "684194ea8a456b7966a9ced1";
