--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Viewer</title>
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7955484448966179"
-     crossorigin="anonymous"></script>
-  
+    crossorigin="anonymous"></script>
+
   <style>
     :root {
       --bg: #111;
@@ -136,32 +136,41 @@
       z-index: 1000;
     }
 
-    /* Floating Toggle Theme Button */
-    #toggleTheme {
+    /* Dark/Light Toggle Button */
+    .toggle-mode {
       position: fixed;
       bottom: 30px;
       right: 30px;
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background: var(--card);
-      color: var(--text);
       border: 2px solid var(--text);
+      background: none;
+      color: var(--text);
+      font-size: 1.2rem;
+      cursor: pointer;
+      z-index: 1001;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.2rem;
-      cursor: pointer;
-      z-index: 1000;
-      transition: background 0.3s, color 0.3s, border-color 0.3s;
+    }
+
+    /* Visitor Counter */
+    #visitorCount {
+      margin-top: 1rem;
+      font-size: 0.95rem;
+      color: var(--text);
+      text-align: right;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1> ♔ AnonZx </h1>
+      <h1>♔ AnonZx</h1>
     </div>
+
+    <p id="visitorCount">👥 Visitors count: ...</p>
 
     <input type="text" id="youtubeUrl" placeholder="Paste YouTube URL here..." />
     <button onclick="uploadVideo()">Upload Video</button>
@@ -169,9 +178,12 @@
     <input type="text" id="search" placeholder="Search videos by title or description..." oninput="filterVideos()" />
 
     <div id="videoList">
-      <h2>📺 Videos </h2>
+      <h2>📺 Videos</h2>
     </div>
   </div>
+
+  <!-- Dark/Light Toggle Button -->
+  <button class="toggle-mode" onclick="toggleMode()">🌓</button>
 
   <!-- Toast -->
   <div id="toast" class="toast"></div>
@@ -179,14 +191,10 @@
   <!-- Back to Top Button -->
   <button id="backToTop" onclick="scrollToTop()">↑ Top</button>
 
-  <!-- Floating Toggle Theme Button -->
-  <button id="toggleTheme" onclick="toggleMode()">🌓</button>
-
   <script>
     const BIN_ID = "684194ea8a456b7966a9ced1";
     const API_KEY = "$2a$10$f2z0PYYxfzeZrSzazT56I.ZoVOA0Puemv9KpqA/MbZMd7yz28gqnm";
     const API_URL = `https://api.jsonbin.io/v3/b/${BIN_ID}`;
-
     let allVideos = [];
 
     function extractVideoId(url) {
@@ -309,13 +317,20 @@
 
     window.addEventListener("scroll", () => {
       const btn = document.getElementById("backToTop");
-      if (window.scrollY > 300) {
-        btn.style.display = "block";
-      } else {
-        btn.style.display = "none";
-      }
+      btn.style.display = window.scrollY > 300 ? "block" : "none";
     });
 
+    async function updateVisitorCount() {
+      try {
+        const response = await fetch('https://api.countapi.xyz/hit/anonzx-viewer/visits');
+        const data = await response.json();
+        document.getElementById("visitorCount").innerText = `👥 Visitors count: ${data.value}`;
+      } catch {
+        document.getElementById("visitorCount").innerText = `👥 Visitors count: unknown`;
+      }
+    }
+
+    updateVisitorCount();
     loadAndRenderVideos();
   </script>
 </body>
