--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
     async function updateVisitorCount() {
       try {
-        const response = await fetch('https://api.countapi.xyz/hit/anonzx-viewer/visits');
+        const response = await fetch('https://countapi.jesar.in/hit/anonzx-viewer/visits');
         const data = await response.json();
         document.getElementById("visitorCount").innerText = `👥 Visitors count: ${data.value}`;
       } catch {
