--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       background: #28a745;
       color: white;
       cursor: pointer;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
 
     .header {
@@ -103,7 +103,6 @@
       }
     }
 
-    /* Toast Notification */
     .toast {
       position: fixed;
       bottom: 30px;
@@ -121,7 +120,6 @@
       opacity: 1;
     }
 
-    /* Back to Top Button */
     #backToTop {
       position: fixed;
       bottom: 40px;
@@ -136,7 +134,6 @@
       z-index: 1000;
     }
 
-    /* Dark/Light Toggle Button */
     .toggle-mode {
       position: fixed;
       bottom: 30px;
@@ -155,12 +152,15 @@
       justify-content: center;
     }
 
-    /* Visitor Counter */
-    #visitorCount {
-      margin-top: 1rem;
-      font-size: 0.95rem;
-      color: var(--text);
-      text-align: right;
+    #settings {
+      background: var(--card);
+      padding: 1rem;
+      border-radius: 8px;
+      margin-top: 2rem;
+    }
+
+    #settings h2 {
+      margin-top: 0;
     }
   </style>
 </head>
@@ -178,15 +178,18 @@
     <div id="videoList">
       <h2>📺 Videos</h2>
     </div>
+
+    <div id="settings">
+      <h2>⚙️ Settings</h2>
+      <label for="bgImageInput">Background Image URL:</label>
+      <input type="text" id="bgImageInput" placeholder="Enter image URL..." />
+      <button onclick="setBackgroundImage()">Set Background</button>
+      <button onclick="clearBackgroundImage()">Clear Background</button>
+    </div>
   </div>
 
-  <!-- Dark/Light Toggle Button -->
   <button class="toggle-mode" onclick="toggleMode()">🌓</button>
-
-  <!-- Toast -->
   <div id="toast" class="toast"></div>
-
-  <!-- Back to Top Button -->
   <button id="backToTop" onclick="scrollToTop()">↑ Top</button>
 
   <script>
@@ -318,7 +321,34 @@
       btn.style.display = window.scrollY > 300 ? "block" : "none";
     });
 
+    // Custom background functions
+    function setBackgroundImage() {
+      const url = document.getElementById("bgImageInput").value.trim();
+      if (url) {
+        document.body.style.backgroundImage = `url('${url}')`;
+        document.body.style.backgroundSize = "cover";
+        localStorage.setItem("customBg", url);
+        showToast("✅ Background set");
+      }
+    }
+
+    function clearBackgroundImage() {
+      document.body.style.backgroundImage = "";
+      localStorage.removeItem("customBg");
+      showToast("🧹 Background cleared");
+    }
+
+    function loadBackgroundFromLocalStorage() {
+      const url = localStorage.getItem("customBg");
+      if (url) {
+        document.body.style.backgroundImage = `url('${url}')`;
+        document.body.style.backgroundSize = "cover";
+      }
+    }
+
+    // Init
     loadAndRenderVideos();
+    loadBackgroundFromLocalStorage();
   </script>
 </body>
 </html>
