--- a/index.html
+++ b/index.html
@@ -185,17 +185,17 @@
     </div>
   </div>
 
-  <!-- Settings Button -->
-  <a href="https://anonzx.netlify.app/settings" class="floating-button" title="Settings">⚙️</a>
+<!-- Settings Button (left side) -->
+<a href="/settings.html" class="toggle-mode" title="Settings" style="position: fixed; bottom: 90px; left: 30px; z-index: 1001;">⚙️</a>
 
-  <!-- Dark/Light Toggle Button -->
-  <button class="toggle-mode" onclick="toggleMode()" title="Toggle Light/Dark">🌓</button>
+<!-- Dark/Light Toggle Button (right side) -->
+<button class="toggle-mode" onclick="toggleMode()" title="Toggle Light/Dark" style="position: fixed; bottom: 30px; right: 30px; z-index: 1001;">🌓</button>
 
-  <!-- Toast Notification -->
-  <div id="toast" class="toast"></div>
+<!-- Toast Notification -->
+<div id="toast" class="toast"></div>
 
-  <!-- Back to Top Button -->
-  <button id="backToTop" onclick="scrollToTop()">↑ Top</button>
+<!-- Back to Top Button -->
+<button id="backToTop" onclick="scrollToTop()">↑ Top</button>
 
   <script>
     const BIN_ID = "684194ea8a456b7966a9ced1";
