--- a/index.html
+++ b/index.html
@@ -121,19 +121,21 @@
       opacity: 1;
     }
 
-    #backToTop {
-      position: fixed;
-      bottom: 40px;
-      left: 30px;
-      background: #28a745;
-      color: white;
-      padding: 0.6rem 1rem;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      display: none;
-      z-index: 1000;
-    }
+#backToTop {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: #28a745;
+  color: white;
+  padding: 0.4rem 0.6rem;
+  font-size: 0.85rem;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  display: none;
+  z-index: 1000;
+}
+
 
     .toggle-mode {
       width: 50px;
