--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   position: fixed;
   bottom: 20px;
   left: 20px;
-  background: #28a745;
+  background: #800000;
   color: white;
   padding: 0.4rem 0.6rem;
   font-size: 0.85rem;
